# simpleptgpu

./: CMakeLists.txt  intersection.hpp  main.cu  ray.hpp  rtaa.cu  scene.hpp  sphere.hpp
